[package]
name = "dr-w-falls"
version = "0.2.1"
authors = ["Julian Ganz <neither@nut.email>"]
edition = "2018"

[dependencies]
bytes = "1.0"
clap = "2.33"
futures = "0.3"
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
rand_pcg = "0.3"
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }

