[package]
name = "dr-w-falls"
version = "0.3.0"
authors = ["Julian Ganz <neither@nut.email>"]
edition = "2018"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[dependencies]
bytes = "1.0"
clap = "2.33"
futures = "0.3"
log = "0.4"
rand = { version = "0.8", features = ["getrandom"] }
rand_pcg = "0.3"
tokio = { version = "1.6", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }

